fix spacing line #162

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ html {
 
 #content-container {
   margin-left: 280px;
-  padding: 0.5em;
+  padding: 0em;
   min-height: 100vh;
   background-color: #fefefe;
 }
@@ -151,6 +151,24 @@ html {
   background-repeat: no-repeat;
   background-image: url(../images/ourteam.jpg);
   background-position: center 20%;
+}
+.ws-team3 {
+  min-height: 500px;
+  width: 380px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url(../images/ourteam.jpg);
+  background-position: center 20%;
+}
+
+.ws-team4 {
+  text-align: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  padding-left: 15px;
+  padding-right: 15px;
+  max-width: 800px;
+  margin: auto;
 }
 
 .ws-team-item {
@@ -407,6 +425,7 @@ html {
 
 .ws-bg6 {
   color: white;
+  width: 390px;
   height: 500px;
   background-image: url(../images/wong&sim/generaldentistry.jpg);
   background-size: cover;
